<resources>
    <string name="app_name">Instagram</string>
    <string name="count_post">200</string>
    <string name="postingan">Postingan</string>
    <string name="count_follower">150</string>
    <string name="pengikut">Pengikut</string>
    <string name="count_following">20</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="profile_name">Gunawan</string>
    <string name="jurusan">Teknik Informatika</string>
    <string name="kampus">Politeknik Negeri Ketapang</string>
    <string name="btn_follow">Ikuti</string>
    <string name="btn_chatan">Kirim Pesan</string>
</resources>
